--- a/index.htm
+++ b/index.htm
@@ -1,42 +1,48 @@
+<!doctype html>
 <html>
 <head>
-<title>Manashield</title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-<style type="text/css">.image2 {margin-top: 15px; transition: transform 2s;}.image2:hover {transform: rotateY(180deg);}.main-col{margin-top: 50px; margin-bottom: 100px;}.inner-row{padding-left: 20px;}.polaroid{padding-top: 0px; background-color: #DEDEDE;border: 10px solid transparent;border-image: url(http://images.clipartpanda.com/border-clipart-Old_style_border_Vector_Clipart.png) 24 round;}.centre{display: block;margin-left: auto;margin-right: auto;}
+	<title>Manashield</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<style type="text/css">.image2{margin-top:15px;transition:transform2s;}.image2:hover{transform:rotateY(180deg);}.main-col{background-color:black;margin-top:0px;padding-bottom:100px}.inner-row{padding-left:20px;}.polaroid{padding-top:0px;background-color:#DEDEDE;border:10px solid transparent;border-image:url(http://images.clipartpanda.com/border-clipart-Old_style_border_Vector_Clipart.png) 54 stretch;}.centre{display:block;margin-left:auto;margin-right:auto;}.header{margin-top:1px}.header img{float:left;border:1px solid #262632;}.header img:hover{cursor: pointer;border: 1px solid #305A75;}.img-right{border-top-right-radius: 4px;border-bottom-right-radius: 4px;}.img-left{border-top-left-radius: 4px;border-bottom-left-radius: 4px;}
 }</style>
 </head>
-<body style="background-color: black">
-<div class="col-sm-6 col-sm-offset-3 main-col">
+<body style="background-color: #101010;">
+	<div class="col-sm-6 col-sm-offset-3 main-col">
 
-<div class="row">
-<img src="img/manashield.png" width="100%">
-</div>
-<div class="row inner-row">
+	<div class="row header">
+		<img class="img-left" src="img/home.png">
+		<img class="img-right" src="img/games.png">
+	</div>
 
-<a href="jsh">
-<div class="col-sm-4 col-sm-offset-1 polaroid">
-<div class="row">
-<img id="borderimg1" class="centre" src="img/jsh.png" width="100%">
-</div>
-<div class="row" style="text-align: center">
-<h1>J S H</h1>
-</div>
-</div>
-</a>
+	<div class="row">
+		<img src="img/manashield.png" width="100%">
+	</div>
+	<div class="row inner-row">
 
-<a href="thex">
-<div class="col-sm-4 col-sm-offset-2 polaroid">
-<div class="row">
-<img class="centre" src="img/thex.png" width="100%">
-</div>
-<div class="row" style="text-align: center">
-<h1>T H E X</h1>
-</div>
-</div>
-</a>
+		<a href="http://ensminecraft.manashield.fr/jsh">
+		<div class="col-sm-4 col-sm-offset-1 polaroid">
+			<div class="row">
+				<img id="borderimg1" class="centre" src="img/jsh.png" width="100%">
+			</div>
+			<div class="row" style="text-align: center">
+				<h1>J S H</h1>
+			</div>
+		</div>
+		</a>
 
-</div>
-</div>
+		<a href="http://ensminecraft.manashield.fr/thex">
+		<div class="col-sm-4 col-sm-offset-2 polaroid">
+			<div class="row">
+				<img class="centre" src="img/thex.png" width="100%">
+			</div>
+			<div class="row" style="text-align: center">
+				<h1>T H E X</h1>
+			</div>
+		</div>
+		</a>
+
+	</div>
+	</div>
 </body>
 </html>
