--- a/index.htm
+++ b/index.htm
@@ -4,74 +4,80 @@
 	<title>Manashield</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	<style type="text/css">.image2{margin-top:15px;transition:transform2s;}.image2:hover{transform:rotateY(180deg);}.main-col{background-color:black;padding-bottom:100px;border-image:url();}.inner-row{padding-left:20px;margin-top:30px}.polaroid{padding-top:0px;background-color:#DEDEDE;border:10px solid transparent;border-image:url(http://images.clipartpanda.com/border-clipart-Old_style_border_Vector_Clipart.png) 54 stretch;}.centre{display:block;margin-left:auto;margin-right:auto;}.header{margin-top:1px}.header img{float:left;border:1px solid #262632;}.header img:hover{cursor: pointer;border: 1px solid #305A75;}.img-right{border-top-right-radius: 4px;border-bottom-right-radius: 4px;}.img-left{border-top-left-radius: 4px;border-bottom-left-radius: 4px;}.image-row{margin-top:20px;}a{color:black;}a:visited{color:black;}a:hover{color:black;}
+	<style type="text/css">.image2{margin-top:15px;transition:transform2s;}.image2:hover{transform:rotateY(180deg);}.main-col{background-color:black;margin-bottom:250px;border-image:url();}.inner-row{padding-left:20px;margin-top:30px}.polaroid{padding-top:0px;background-color:#DEDEDE;border:10px solid transparent;border-image:url(http://images.clipartpanda.com/border-clipart-Old_style_border_Vector_Clipart.png) 54 stretch;}.centre{display:block;margin-left:auto;margin-right:auto;}.header{margin-top:1px}.header img{float:left;border:1px solid #262632;}.header img:hover{cursor: pointer;border: 1px solid #305A75;}.img-right{border-top-right-radius: 4px;border-bottom-right-radius: 4px;}.img-left{border-top-left-radius: 4px;border-bottom-left-radius: 4px;}.image-row{margin-top:20px;}a{color:black;}a:visited{color:black;}a:hover{color:black;}
 	</style>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script src="app.js"></script>
+    <script src="js/frontpage.js"></script>
 </head>
 <body style="background-image: url('img/bordure2.png');background-size: 100% 100%;background-attachment:fixed;" ng-app="manashield">
 	<div class="col-sm-6 col-sm-offset-3 main-col">
 
-	<div class="row header">
-		<img class="img-left" src="img/home.png">
-		<img class="img-right" src="img/games.png">
-	</div>
-
-	<div class="row image-row">
-		<img src="img/manashield.png" width="100%">
-	</div>
-	<div class="row inner-row">
-
-		<a href="http://ensminecraft.manashield.fr/jsh">
-		<div class="col-sm-4 col-sm-offset-1 polaroid">
-			<div class="row">
-				<img id="borderimg1" class="centre" src="img/jsh.png" width="100%">
-			</div>
-			<div class="row" style="text-align: center" ng-hide="{{imgHide}}">
-				<h1>J S H</h1>
-				<p>
-					A clone of the great Game Super Hexagon.
-				</p>
-				<p>
-					You play the little arrow and have to dodge the obstacles coming at you by moving around the central hexagon.
-				</p>
-				<p>
-					Controls : 
-					<ul>
-						<li>left arrow / left click : clockwise</li>
-						<li>right arrow / right click : anti-clockwise</li>
-					</ul>
-				</p>
-			</div>
+		<div class="row header">
+			<img class="img-left" src="img/home.png">
+			<img class="img-right" src="img/games.png">
 		</div>
-		</a>
 
-		<a href="img-right/thex">
-		<div class="col-sm-4 col-sm-offset-2 polaroid">
-			<div class="row">
-				<img class="centre" src="img/thex.png" width="100%">
-			</div>
-			<div class="row" style="text-align: center">
-				<h1>T H E X</h1>
-				<p>
-					A gravity enabled bubble shooter tetris.
-				</p>
-				<p>
-					You have to pop all the colored tiles by putting 3 or more together. Be carefull, the tiles always go toward the black one !
-				</p>
-				<p>
-					Controls:
-					<ul>
-						<li>left arrow : clockwise</li>
-						<li>right arrow : anti-clockwise</li>
-						<li>down arrow : fast fall</li>
-					</ul>
-				</p>
-			</div>
+		<div class="row image-row">
+			<img src="img/manashield.png" width="100%">
 		</div>
-		</a>
 
-	</div>
+		<div class="row inner-row" ng-controller="frontpage">
+
+			<a href="http://ensminecraft.manashield.fr/jsh">
+				<div class="col-sm-4 col-sm-offset-1 polaroid" ng-mouseover="jshHide=false" ng-mouseleave="jshHide=true" ng-init="jshHide=true">
+					<div class="row">
+						<img id="borderimg1" class="centre" src="img/jsh.png" width="100%">
+					</div>
+					<div class="row" style="text-align: center">
+						<h1>J S H</h1>
+						<p>
+							A clone of the great Game Super Hexagon.
+						</p>
+						<div ng-hide="jshHide">
+							<p>
+								You play the little arrow and have to dodge the obstacles coming at you by moving around the central hexagon.
+							</p>
+							<p>
+								Controls : 
+								<ul>
+									<li>left arrow / left click : clockwise</li>
+									<li>right arrow / right click : anti-clockwise</li>
+								</ul>
+							</p>
+						</div>
+					</div>
+				</div>
+			</a>
+
+			<a href="img-right/thex">
+				<div class="col-sm-4 col-sm-offset-2 polaroid" ng-mouseover="thexHide=false" ng-mouseleave="thexHide=true" ng-init="thexHide=true">
+					<div class="row">
+						<img class="centre" src="img/thex.png" width="100%">
+					</div>
+					<div class="row" style="text-align: center">
+						<h1>T H E X</h1>
+						<p>
+							A gravity enabled bubble shooter tetris.
+						</p>
+						<div ng-hide="thexHide">
+							<p>
+								You have to pop all the colored tiles by putting 3 or more together. Be carefull, the tiles always go toward the black one !
+							</p>
+							<p >
+								Controls:
+								<ul>
+									<li>left arrow : clockwise</li>
+									<li>right arrow : anti-clockwise</li>
+									<li>down arrow : fast fall</li>
+								</ul>
+							</p>
+						</div>
+					</div>
+				</div>
+			</a>
+
+		</div>
 	</div>
 </body>
 </html>
