Changing central image

--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,8 @@
 		</div>
 
 		<div class="row image-row">
-			<img src="img/manashield.png" width="100%">
+			<img src="img/logo.png" width="50%">
+            <h1>MANASHIELD</h1>
 		</div>
 
 		<div class="row inner-row" ng-controller="frontpage">
